2007-05-24  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (SUBLEVEL): 1.5.3.  Rolling rev for the sake of working
	IPU code, working sensor capture, and turing off of the
	illumination LEDs.

	* src/mach-mx3/ipu.c (cmd_ipu): Fixed the shutter width to
	increase frame rate.
	
	* src/mach-mx3/ipu.c (ipu_setup): Fixed the burst width to memory
	through the IPU DMAC.

2007-05-22  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/drv-dm9000.c: Fixed failed probe code path.  If the
	dm9000 isn't found, there will be no report.

	* src/mach-mx3/ipu.c: Adding view finder DMA task.

	* src/lib/env.c (env_check_magic): Fixed empty/broken environment
	region case.

2007-05-18  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (ARCH): Releasing 1.5.2.

	* src/arch-arm/Kconfig: Fixed companion boot by explicitly
	enabling the simple/NOR flash relocator as the primary relocator.

	* src/drivers/drv-nand.c (nand_sequential_input): Fixed the NAND
	driver to R/W on ST NAND parts.

2007-05-17  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-lh7952x/debug_ll.h: Fixed UART declarations.

	* src/mach-lh7952x/init-motoedge.c: Converted to inline
	platform initialization.

	* src/arch-arm/entry/relocate-simple.c: fixed relocate-simple()
	because we changed the way we handle offsets.

2007-05-16  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (SUBLEVEL): Rolled to 1.5.2 so that we can keep track
	of this interim release.

	* src/apex/command.c (exec_monitor): Eliminated representation of
	empty commands in startup command list.

2007-05-15  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/apex.lds.S: Reorganized the sections and the
	section names to be more readable and consistent.

2007-05-12  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/reset.c: Restructured to allow for cleaner
	startup code.  Legacy implementations are still OK, but the new
	plumbing permits seamless transitions between various